update HU translations
(Old svn revision: 4370)

--- a/po/hu.po
+++ b/po/hu.po
@@ -4,20 +4,20 @@
 # This file is distributed under the same license as the xfce package.
 # Somogyi Peter <jerry@gnu>, 2003.
 # Egmont Koblinger <egmont@uhulinux.hu>, 2003
-# Servitore <sas@321.hu>, 2004
+# Servitore <sas@321 uh:))>, 2004
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: hu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-29 11:29+0200\n"
-"PO-Revision-Date: 2005-01-10 08:51+0100\n"
-"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2005-03-10 10:57+0100\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 
 #: panel/xfce_support.c:516
 msgid "Select file"
@@ -172,7 +172,6 @@ msgid "_About Xfce"
 msgstr "Xfce _névjegy"
 
 #: panel/panel.c:595
-#, fuzzy
 msgid "_Help"
 msgstr "/_Súgó"
 
@@ -182,7 +181,7 @@ msgstr "Képernyő_zár"
 
 #: panel/panel.c:609
 msgid "_Restart"
-msgstr "_Újraindítás"
+msgstr "Újra_indítás"
 
 #: panel/panel.c:618
 msgid "E_xit"
@@ -306,7 +305,7 @@ msgstr "Mindig felül:"
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
-msgstr "Automatikus elrejtés:"
+msgstr "Automatikus el_rejtés:"
 
 #: settings/xfce_settings_dialog.c:466
 msgid "Xfce Panel Settings"
@@ -321,10 +320,9 @@ msgid "Behaviour"
 msgstr "Láthatóság"
 
 #. Use format characters from strftime(3)
-#. * %d  : day of the month
 #: plugins/clock/clock.c:202
 msgid "%A, %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%Y. %B %d., %A"
 
 #: plugins/clock/clock.c:429
 msgid "Clock type:"
@@ -364,7 +362,7 @@ msgstr "Másodpercek kijelzése:"
 
 #: plugins/clock/clock.c:682
 msgid "Xfce Clock"
-msgstr "Xfce Óra"
+msgstr "Xfce óra"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
@@ -473,14 +471,12 @@ msgid "Position"
 msgstr "Helyzet"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:306
-#, fuzzy
 msgid "_Top"
-msgstr "Fent"
+msgstr "_Fent"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:313
-#, fuzzy
 msgid "_Bottom"
-msgstr "Lent"
+msgstr "_Lent"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:320
 msgid "Alignment"
@@ -488,15 +484,15 @@ msgstr "Igazítás"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:329
 msgid "_Left"
-msgstr "Balra"
+msgstr "_Balra"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:336
 msgid "_Center"
-msgstr "Középre"
+msgstr "_Középre"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:343
 msgid "_Right"
-msgstr "Jobbra"
+msgstr "_Jobbra"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:350
 msgid "Autohide"
@@ -504,7 +500,7 @@ msgstr "Automatikus elrejtés"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:354
 msgid "Auto _hide taskbar"
-msgstr "Feladatsáv automatikus rejtése"
+msgstr "Feladatsáv automatikus _rejtése"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:359
 msgid "Size"
@@ -540,7 +536,7 @@ msgstr "Lapozó"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:479
 msgid "Show _pager in taskbar"
-msgstr "Lapozó a feladatsávon"
+msgstr "La_pozó a feladatsávon"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:484
 msgid "Notification area"
@@ -548,7 +544,7 @@ msgstr "Értesítési terület"
 
 #: xftaskbar/plugin/xftaskbar_plugin.c:488
 msgid "Show _system tray in taskbar"
-msgstr "Rendszertálca a feladatsávon"
+msgstr "Rendszertálca a feladat_sávon"
 
 #: xftaskbar/xftaskbar.c:137
 msgid "Cannot get initial style"
