--- a/po/ko.po
+++ b/po/ko.po
@@ -7,23 +7,24 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-10-29 11:29+0200\n"
-"PO-Revision-Date: 2004-11-27 22:36+0900\n"
+"POT-Creation-Date: 2005-03-12 22:33+0100\n"
+"PO-Revision-Date: 2005-03-17 22:48+0900\n"
 "Last-Translator: ByungHyun Choi<byunghyunchoi@rtlinux.or.kr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: panel/xfce_support.c:516
+#: panel/xfce_support.c:307
 msgid "Select file"
 msgstr "화일선택"
 
-#: panel/settings.c:179
+#: panel/settings.c:268
 msgid "No data was found. The panel will be empty."
 msgstr "데이터를 찾지 못했기 때문에 패널에는 아무 것도 보이지 않습니다."
 
-#: panel/controls_dialog.c:89 panel/item_dialog.c:1157
+#: panel/controls_dialog.c:89 panel/item_dialog.c:1136
+#: settings/xftaskbar_plugin.c:393
 msgid "Position:"
 msgstr "위치:"
 
@@ -31,72 +32,72 @@ msgstr "위치:"
 msgid "Item properties"
 msgstr "속성"
 
-#: panel/controls_dialog.c:209 panel/controls.c:691
+#: panel/controls_dialog.c:210 panel/controls.c:714
 msgid "Removing the item will also remove its popup menu."
 msgstr "이 항목을 삭제하면 팝업 메뉴도 같이 사라집니다."
 
-#: panel/item_dialog.c:123 panel/item_dialog.c:551
+#: panel/item_dialog.c:123
 msgid "Select command"
 msgstr "명령어 선택"
 
-#: panel/item_dialog.c:264
+#: panel/item_dialog.c:260
 msgid "Command:"
 msgstr "명령:"
 
-#: panel/item_dialog.c:307
+#: panel/item_dialog.c:306
 msgid "Run in _terminal"
 msgstr "터미널에서 실행하기(_t)"
 
-#: panel/item_dialog.c:325
+#: panel/item_dialog.c:324
 msgid "Use startup _notification"
 msgstr "시작과 동시에 알림(_n)"
 
-#: panel/item_dialog.c:511
+#: panel/item_dialog.c:510
 msgid "Other Icon"
 msgstr "다른 아이콘"
 
-#: panel/item_dialog.c:622
+#: panel/item_dialog.c:621
 msgid "Drag file onto this frame to change the icon"
 msgstr "아이콘을 변경하려면 이 프레임에 화일을 끌어다 놓으세요."
 
-#: panel/item_dialog.c:917
+#: panel/item_dialog.c:933
 msgid "Caption:"
 msgstr "캡션:"
 
-#: panel/item_dialog.c:946
+#: panel/item_dialog.c:962
 msgid "Tooltip:"
 msgstr "도구도움말:"
 
-#: panel/item_dialog.c:974
+#: panel/item_dialog.c:988
 msgid "Attach menu to launcher"
 msgstr "실행기에 메뉴 추가"
 
-#: panel/item_dialog.c:1194
+#: panel/item_dialog.c:1173
 msgid "Change menu item"
 msgstr "메뉴 항목 변경"
 
 #. add buttons
-#: panel/item_dialog.c:1200 panel/controls.c:728
+#: panel/item_dialog.c:1179 panel/controls.c:751
 msgid "_Remove"
 msgstr "삭제(_R)"
 
-#: panel/item_dialog.c:1212 panel/item.c:668
+#: panel/item_dialog.c:1191
 msgid "Launcher"
 msgstr "실행기"
 
-#: panel/item.c:496
+#: panel/item.c:619
 msgid "Click mouse button 3 to change item"
 msgstr "항목을 변경하려면 마우스 버튼 3을 클릭하세요."
 
-#: panel/item.c:521
+#: panel/item.c:644
 msgid "Add launcher"
 msgstr "실행기 추가"
 
-#: panel/item.c:526
+#: panel/item.c:649
 msgid "Add new item"
 msgstr "새 항목 추가"
 
-#: panel/main.c:121
+#: panel/main.c:120
 msgid "Are you sure you want to exit?"
 msgstr "종료하시겠습니까?"
 
@@ -117,61 +118,61 @@ msgstr ""
 " Xfce Panel\n"
 " Version %s\n"
 "\n"
-" Xfce 데스크탑 환경의 부속품입니다.\n"
+" Xfce 데스크탑 환경의 일부분입니다.\n"
 " http://www.xfce.org\n"
 "\n"
 " GNU GPL 라이선스를 따릅니다.\n"
 "\n"
 
-#: panel/main.c:488
+#: panel/main.c:484
 #, c-format
 msgid "%s: Successfully started without session management"
 msgstr "세션관리 없이 %s를(을) 시작했습니다."
 
-#: panel/main.c:493
+#: panel/main.c:489
 #, c-format
 msgid "%s: Successfully started with session management"
 msgstr "세션을 관리하면서 %s를(을) 시작했습니다."
 
-#: panel/controls.c:646
+#: panel/controls.c:668
 #, c-format
 msgid "Could not create panel item \"%s\"."
 msgstr "패널 항목 \"%s\"를(을) 생성하지 못 했습니다."
 
-#: panel/controls.c:723 panel/panel.c:585
+#: panel/controls.c:746 panel/panel.c:715 iconbox/iconbox.c:618
 msgid "_Properties..."
 msgstr "속성(_P)"
 
-#: panel/controls.c:737 panel/panel.c:575
+#: panel/controls.c:760 panel/panel.c:705
 msgid "Add _new item"
 msgstr "새 항목 추가(_n)"
 
-#: panel/controls.c:1020
+#: panel/controls.c:1087
 msgid "This item has no configuration options"
 msgstr "이 아이템은 속성을 정의할 수 없습니다."
 
-#: panel/panel.c:566 panel/panel.c:980 settings/xfce_settings_plugin.c:86
-#: settings/xfce_settings_dialog.c:449
+#: panel/panel.c:696 panel/panel.c:1048 settings/xfce_settings_plugin.c:86
+#: settings/xfce_settings_dialog.c:392
 msgid "Xfce Panel"
 msgstr "Xfce 패널"
 
-#: panel/panel.c:590
+#: panel/panel.c:720
 msgid "_About Xfce"
 msgstr "Xfce는(_A)..."
 
-#: panel/panel.c:595
+#: panel/panel.c:725
 msgid "_Help"
 msgstr "도움말(_H)"
 
-#: panel/panel.c:604
+#: panel/panel.c:734
 msgid "_Lock screen"
 msgstr "화면잠금(_L)"
 
-#: panel/panel.c:609
+#: panel/panel.c:739
 msgid "_Restart"
 msgstr "다시 시작(_R)"
 
-#: panel/panel.c:618
+#: panel/panel.c:748 iconbox/iconbox.c:628
 msgid "E_xit"
 msgstr "종료(_x)"
 
@@ -223,89 +224,24 @@ msgstr "개발도구"
 msgid "Sound"
 msgstr "사운드"
 
-#: panel/icons.c:75
-msgid "Terminal"
+#. Translation with context.
+#. * Translators only need to translate 'Terminal'
+#: panel/icons.c:77
+msgid "icons|Terminal"
 msgstr "터미널"
 
-#: panel/mcs_client.c:170
+#: panel/mcs_client.c:168
 msgid "Settings manager not available"
 msgstr "설정 도구 모음을 실행시킬 수 없군요."
 
-#: panel/popup.c:267
-msgid "Menu"
-msgstr "메뉴"
+#: taskbar/xftaskbar.c:510
+msgid "There is already a system tray running on this screen"
+msgstr "이 화면에는 시스템 트레이가 이미 동작 중입니다."
 
-#: settings/xfce_settings_dialog.c:88
-msgid "Small"
-msgstr "작게"
-
-#: settings/xfce_settings_dialog.c:92
-msgid "Medium"
-msgstr "중간"
-
-#: settings/xfce_settings_dialog.c:96
-msgid "Large"
-msgstr "크게"
-
-#: settings/xfce_settings_dialog.c:100
-msgid "Huge"
-msgstr "아주 크게"
-
-#: settings/xfce_settings_dialog.c:176
-msgid "Horizontal"
-msgstr "수평"
-
-#: settings/xfce_settings_dialog.c:180
-msgid "Vertical"
-msgstr "수직"
-
-#: settings/xfce_settings_dialog.c:222
-msgid "Left"
-msgstr "좌측"
-
-#: settings/xfce_settings_dialog.c:226
-msgid "Right"
-msgstr "우측"
-
-#: settings/xfce_settings_dialog.c:230
-msgid "Top"
-msgstr "위"
-
-#: settings/xfce_settings_dialog.c:234
-msgid "Bottom"
-msgstr "아래"
-
-#: settings/xfce_settings_dialog.c:269
-msgid "Panel size:"
-msgstr "패널 크기:"
-
-#: settings/xfce_settings_dialog.c:285
-msgid "Panel orientation:"
-msgstr "패널 방향:"
-
-#: settings/xfce_settings_dialog.c:304
-msgid "Popup position:"
-msgstr "패널 위치:"
-
-#: settings/xfce_settings_dialog.c:343
-msgid "Always on top:"
-msgstr "항상 위에 보이기:"
-
-#: settings/xfce_settings_dialog.c:396
-msgid "Autohide:"
-msgstr "자동 숨김:"
-
-#: settings/xfce_settings_dialog.c:466
-msgid "Xfce Panel Settings"
-msgstr "Xfce 패널 설정"
-
-#: settings/xfce_settings_dialog.c:476
-msgid "Appearance"
-msgstr "겉 모습"
-
-#: settings/xfce_settings_dialog.c:491
-msgid "Behaviour"
-msgstr "동작"
+#: taskbar/xftaskbar.c:516
+#, c-format
+msgid "Unable to register system tray: %s"
+msgstr "시스템 트레이에 %s를(을) 등록하지 못 했습니다."
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -315,59 +251,298 @@ msgstr "동작"
 #. * %B  : full month name
 #. * %Y  : four digit year
 #.
-#: plugins/clock/clock.c:202
+#: taskbar/xftaskbar.c:616
+msgid "%A %d %B %Y"
+msgstr "%Y-%m-%d %A"
+
+#: taskbar/xftaskbar.c:637
+msgid "%H:%M"
+msgstr ""
+
+#: taskbar/xftaskbar.c:910 settings/xftaskbar_plugin.c:696
+#: settings/xftaskbar_plugin.c:706 settings/xftaskbar_plugin.c:987
+msgid "Taskbar"
+msgstr "태스크바"
+
+#: taskbar/xftaskbar.c:1025
+msgid "Cannot create MCS client channel"
+msgstr "MCS 클라이언트 채널을 생성하지 못 했습니다."
+
+#: iconbox/iconbox.c:568
+msgid "Xfce Iconbox"
+msgstr "Xfce 아이콘박스 설정"
+
+#: iconbox/iconbox.c:576
+msgid "Developer"
+msgstr "만든이"
+
+#: iconbox/iconbox.c:612
+msgid "_About"
+msgstr "Xfce는(_A)..."
+
+#: settings/xfce_settings_dialog.c:87 settings/xftaskbar_plugin.c:480
+#: settings/xftaskbar_plugin.c:511
+msgid "Small"
+msgstr "작게"
+
+#: settings/xfce_settings_dialog.c:91
+msgid "Medium"
+msgstr "중간"
+
+#: settings/xfce_settings_dialog.c:95 settings/xftaskbar_plugin.c:499
+#: settings/xftaskbar_plugin.c:532
+msgid "Large"
+msgstr "크게"
+
+#: settings/xfce_settings_dialog.c:99
+msgid "Huge"
+msgstr "아주 크게"
+
+#: settings/xfce_settings_dialog.c:175
+msgid "Horizontal"
+msgstr "수평"
+
+#: settings/xfce_settings_dialog.c:179
+msgid "Vertical"
+msgstr "수직"
+
+#: settings/xfce_settings_dialog.c:221
+msgid "Left"
+msgstr "좌측"
+
+#: settings/xfce_settings_dialog.c:225
+msgid "Right"
+msgstr "우측"
+
+#: settings/xfce_settings_dialog.c:229
+msgid "Top"
+msgstr "위"
+
+#: settings/xfce_settings_dialog.c:233
+msgid "Bottom"
+msgstr "아래"
+
+#: settings/xfce_settings_dialog.c:268
+msgid "Panel size:"
+msgstr "패널 크기:"
+
+#: settings/xfce_settings_dialog.c:284
+msgid "Panel orientation:"
+msgstr "패널 방향:"
+
+#: settings/xfce_settings_dialog.c:303
+msgid "Popup position:"
+msgstr "패널 위치:"
+
+#: settings/xfce_settings_dialog.c:339
+msgid "Autohide:"
+msgstr "자동 숨김:"
+
+#: settings/xfce_settings_dialog.c:409
+msgid "Xfce Panel Settings"
+msgstr "Xfce 패널 설정"
+
+#: settings/xfce_settings_dialog.c:419
+msgid "Appearance"
+msgstr "겉 모습"
+
+#. show only hidden
+#: settings/xfce_settings_dialog.c:434 settings/iconbox_plugin.c:685
+msgid "Behaviour"
+msgstr "동작"
+
+#. position
+#: settings/xftaskbar_plugin.c:383 settings/iconbox_plugin.c:298
+msgid "Position"
+msgstr "위치"
+
+#: settings/xftaskbar_plugin.c:399
+msgid "_Top"
+msgstr "위(_T)"
+
+#: settings/xftaskbar_plugin.c:409
+msgid "_Bottom"
+msgstr "아래(_B)"
+
+#: settings/xftaskbar_plugin.c:422
+msgid "Alignment:"
+msgstr "배치"
+
+#: settings/xftaskbar_plugin.c:429
+msgid "_Left"
+msgstr "왼쪽(_L)"
+
+#: settings/xftaskbar_plugin.c:439
+msgid "_Center"
+msgstr "가운데(_C)"
+
+#: settings/xftaskbar_plugin.c:447
+msgid "_Right"
+msgstr "오른쪽(_R)"
+
+#. size
+#: settings/xftaskbar_plugin.c:464
+msgid "Size"
+msgstr "크기"
+
+#: settings/xftaskbar_plugin.c:474
+msgid "Height:"
+msgstr "높이 :"
+
+#: settings/xftaskbar_plugin.c:505
+msgid "Width:"
+msgstr "폭:"
+
+#: settings/xftaskbar_plugin.c:541
+msgid "_Shrink to fit"
+msgstr "크기에 맞게 줄임(_S)"
+
+#. Autohide
+#: settings/xftaskbar_plugin.c:561
+msgid "Autohide"
+msgstr "자동 숨기기"
+
+#: settings/xftaskbar_plugin.c:566
+msgid "Auto _hide taskbar"
+msgstr "태스크바 자동 숨김(_h)"
+
+#. tasklist
+#: settings/xftaskbar_plugin.c:583
+msgid "Tasklist"
+msgstr "태스크 목록"
+
+#: settings/xftaskbar_plugin.c:592
+msgid "Show tasklist"
+msgstr "태스크 목록 보이기"
+
+#: settings/xftaskbar_plugin.c:604
+msgid "Show tasks from _all workspaces"
+msgstr "모든 작업공간의 태스크 보이기(_a)"
+
+#: settings/xftaskbar_plugin.c:613
+msgid "Always _group tasks"
+msgstr "같은 태스크는 한 군데로 모으기(_g) "
+
+#: settings/xftaskbar_plugin.c:621
+msgid "Show application _names"
+msgstr "프로그램 이름 보이기(_n)"
+
+#. pager
+#: settings/xftaskbar_plugin.c:629
+msgid "Pager"
+msgstr "페이저"
+
+#: settings/xftaskbar_plugin.c:634
+msgid "Show _pager in taskbar"
+msgstr "태스크바에 페이저 보이기(_p)"
+
+#. status area
+#: settings/xftaskbar_plugin.c:641
+msgid "Status area"
+msgstr "상태 영역"
+
+#: settings/xftaskbar_plugin.c:650
+msgid "Show _notification icons"
+msgstr "프로그램 이름 보이기(_n)"
+
+#: settings/xftaskbar_plugin.c:657
+msgid "Show _time"
+msgstr "시계를 보여줌(_t)"
+
+#: settings/xftaskbar_plugin.c:718
+msgid "General"
+msgstr ""
+
+#: settings/xftaskbar_plugin.c:729
+msgid "Components"
+msgstr ""
+
+#: settings/iconbox_plugin.c:629
+msgid "Icon size"
+msgstr "아이콘 크기"
+
+#: settings/iconbox_plugin.c:691
+msgid "_Show only minimized applications"
+msgstr "최소화된 것만 보이기(_S)"
+
+#: settings/iconbox_plugin.c:754
+msgid "Transparency"
+msgstr "투명"
+
+#: settings/iconbox_plugin.c:762
+msgid "None"
+msgstr "사용안함"
+
+#: settings/iconbox_plugin.c:777
+msgid "Full"
+msgstr "최대"
+
+#: settings/iconbox_plugin.c:831 settings/iconbox_plugin.c:841
+#: settings/iconbox_plugin.c:992
+msgid "Iconbox"
+msgstr "아이콘박스"
+
+#. Use format characters from strftime(3)
+#. * to get the proper string for your locale.
+#. * I used these:
+#. * %A  : full weekday name
+#. * %d  : day of the month
+#. * %B  : full month name
+#. * %Y  : four digit year
+#.
+#: plugins/clock/clock.c:191
 msgid "%A, %d %B %Y"
 msgstr "%Y-%m-%d %A"
 
-#: plugins/clock/clock.c:429
+#: plugins/clock/clock.c:421
 msgid "Clock type:"
 msgstr "시계 형태:"
 
-#: plugins/clock/clock.c:442
+#: plugins/clock/clock.c:434
 msgid "Analog"
 msgstr "아날로그"
 
-#: plugins/clock/clock.c:446
+#: plugins/clock/clock.c:438
 msgid "Digital"
 msgstr "디지탈"
 
-#: plugins/clock/clock.c:450
+#: plugins/clock/clock.c:442
 msgid "LED"
 msgstr "전광판"
 
-#: plugins/clock/clock.c:512
+#: plugins/clock/clock.c:504
 msgid "Hour mode:"
 msgstr "시간 표시:"
 
-#: plugins/clock/clock.c:519
+#: plugins/clock/clock.c:511
 msgid "24 hour"
 msgstr "24시간"
 
-#: plugins/clock/clock.c:525
+#: plugins/clock/clock.c:517
 msgid "12 hour"
 msgstr "12시간"
 
-#: plugins/clock/clock.c:531
+#: plugins/clock/clock.c:523
 msgid "AM/PM"
 msgstr "오전/오후"
 
-#: plugins/clock/clock.c:569
+#: plugins/clock/clock.c:561
 msgid "Show seconds:"
 msgstr "초:"
 
-#: plugins/clock/clock.c:682
+#: plugins/clock/clock.c:674
 msgid "Xfce Clock"
 msgstr "Xfce 시계"
 
-#: plugins/pager/pager.c:311
+#: plugins/pager/pager.c:313
 msgid "Number of rows:"
 msgstr "몇 줄:"
 
-#: plugins/pager/pager.c:313
+#: plugins/pager/pager.c:315
 msgid "Number of columns:"
 msgstr "몇 열:"
 
-#: plugins/pager/pager.c:360
+#: plugins/pager/pager.c:372
 msgid "Graphical pager"
 msgstr "페이저"
 
@@ -388,67 +563,159 @@ msgstr ""
 msgid "Lock the screen"
 msgstr "화면 잠금"
 
-#: plugins/systembuttons/systembuttons.c:171
-#: plugins/systembuttons/systembuttons.c:519
-msgid "Exit"
+#. don't translate 'tip|'
+#: plugins/systembuttons/systembuttons.c:172
+msgid "tip|Exit"
 msgstr "종료"
 
-#: plugins/systembuttons/systembuttons.c:172
-#: plugins/systembuttons/systembuttons.c:520
-msgid "Setup"
+#. don't translate 'tip|'
+#: plugins/systembuttons/systembuttons.c:174
+msgid "tip|Setup"
 msgstr "설정"
 
-#: plugins/systembuttons/systembuttons.c:173
-#: plugins/systembuttons/systembuttons.c:521
-msgid "Info"
+#. don't translate 'tip|'
+#: plugins/systembuttons/systembuttons.c:176
+msgid "tip|Info"
 msgstr "정보"
 
 #. set names to use in option menus
-#: plugins/systembuttons/systembuttons.c:518
+#: plugins/systembuttons/systembuttons.c:521
 msgid "Lock"
 msgstr "잠그기"
 
-#: plugins/systembuttons/systembuttons.c:550
+#: plugins/systembuttons/systembuttons.c:522
+msgid "Exit"
+msgstr "종료"
+
+#: plugins/systembuttons/systembuttons.c:523
+msgid "Setup"
+msgstr "설정"
+
+#: plugins/systembuttons/systembuttons.c:524
+msgid "Info"
+msgstr "정보"
+
+#: plugins/systembuttons/systembuttons.c:553
 msgid "Button 1:"
 msgstr "버튼 1:"
 
-#: plugins/systembuttons/systembuttons.c:565
+#: plugins/systembuttons/systembuttons.c:568
 msgid "Button 2:"
 msgstr "버튼 2:"
 
 #. checkbox
-#: plugins/systembuttons/systembuttons.c:579
+#: plugins/systembuttons/systembuttons.c:582
 msgid "_Hide"
 msgstr "도움말(_H)"
 
-#: plugins/systembuttons/systembuttons.c:616
+#: plugins/systembuttons/systembuttons.c:620
 msgid "System buttons"
 msgstr "시스템 버튼"
 
-#: plugins/separator/separator.c:155
+#: plugins/separator/separator.c:65
 msgid "Separator"
 msgstr "분리표시"
 
-#: plugins/mailcheck/mailcheck.c:787
+#: plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
 msgstr "우편함:"
 
-#: plugins/mailcheck/mailcheck.c:824
+#: plugins/mailcheck/mailcheck.c:875
 msgid "New mail command:"
 msgstr "메일 명령:"
 
-#: plugins/mailcheck/mailcheck.c:838
+#: plugins/mailcheck/mailcheck.c:889
 msgid "Command to run when new mail arrives"
 msgstr "새로운 편지가 왔을 때 실행할 명령"
 
-#: plugins/mailcheck/mailcheck.c:868
+#: plugins/mailcheck/mailcheck.c:919
 msgid "Command to run when the button on the panel is clicked"
 msgstr "패널의 버튼을 클릭할 때 실행할 명령"
 
-#: plugins/mailcheck/mailcheck.c:889
+#: plugins/mailcheck/mailcheck.c:940
 msgid "Interval (sec):"
 msgstr "확인주기(초):"
 
-#: plugins/mailcheck/mailcheck.c:965
+#: plugins/mailcheck/mailcheck.c:1017
 msgid "Mail checker"
 msgstr "메일 확인"
+
+#: settings/xfce-panel-settings.desktop.in.h:1
+msgid "Panel Settings"
+msgstr "패널 설정"
+
+#: settings/xfce-panel-settings.desktop.in.h:2
+msgid "Xfce 4 Panel Settings"
+msgstr "Xfce 4 패널 설정"
+
+#: settings/xfce-iconbox-settings.desktop.in.h:1
+msgid "Iconbox Settings"
+msgstr "아이콘박스 설정"
+
+#: settings/xfce-iconbox-settings.desktop.in.h:2
+msgid "Xfce 4 Iconbox Settings"
+msgstr "Xfce 4 아이콘박스 설정"
+
+#: settings/xfce-taskbar-settings.desktop.in.h:1
+msgid "Taskbar Settings"
+msgstr "태스크바 설정"
+
+#: settings/xfce-taskbar-settings.desktop.in.h:2
+msgid "Xfce 4 Taskbar Settings"
+msgstr "Xfce 4 태스크바 설정"
+
+#: config/contents.xml.in.h:1
+msgid "Appfinder"
+msgstr "응용프로그램 찾기"
+
+#: config/contents.xml.in.h:2
+msgid "Drag file to print"
+msgstr "화일을 끌어다 놓으면 출력됩니다."
+
+#: config/contents.xml.in.h:3
+msgid "File manager"
+msgstr "화일 관리자"
+
+#: config/contents.xml.in.h:4
+msgid "Find and run applications"
+msgstr "응용프로그램을 찾아서 실행하기"
+
+#: config/contents.xml.in.h:5
+msgid "Konqueror"
+msgstr "컹커러"
+
+#: config/contents.xml.in.h:6
+msgid "Konqueror File Manager"
+msgstr "컹커러 화일 관리자"
+
+#: config/contents.xml.in.h:7
+msgid "Manual"
+msgstr "설명서"
+
+#: config/contents.xml.in.h:8
+msgid "Mozilla Web Browser"
+msgstr "모질라 웹 브라우져"
+
+#: config/contents.xml.in.h:9
+msgid "Music player"
+msgstr "음악 연주"
+
+#: config/contents.xml.in.h:10
+msgid "Nautilus"
+msgstr "노틸러스"
+
+#: config/contents.xml.in.h:11
+msgid "Nautilus File Manager"
+msgstr "노틸러스 화일 관리자"
+
+#: config/contents.xml.in.h:12
+msgid "Printer Management"
+msgstr "프린터 관리"
+
+#: config/contents.xml.in.h:13
+msgid "Settings"
+msgstr "설정"
+
+#: config/contents.xml.in.h:14
+msgid "Terminal"
+msgstr "터미널"
