update KO translations
(Old svn revision: 4375)

--- a/po/ko.po
+++ b/po/ko.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-03-12 22:33+0100\n"
-"PO-Revision-Date: 2005-01-29 18:37+0900\n"
+"PO-Revision-Date: 2005-03-22 22:27+0900\n"
 "Last-Translator: ByungHyun Choi<byunghyunchoi@rtlinux.or.kr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -227,7 +227,6 @@ msgstr "사운드"
 #. Translation with context.
 #. * Translators only need to translate 'Terminal'
 #: panel/icons.c:77
-#, fuzzy
 msgid "icons|Terminal"
 msgstr "터미널"
 
@@ -258,7 +257,7 @@ msgstr "%Y-%m-%d %A"
 
 #: taskbar/xftaskbar.c:637
 msgid "%H:%M"
-msgstr ""
+msgstr "%H:%M"
 
 #: taskbar/xftaskbar.c:910 settings/xftaskbar_plugin.c:696
 #: settings/xftaskbar_plugin.c:706 settings/xftaskbar_plugin.c:987
@@ -480,9 +479,8 @@ msgstr "최대"
 
 #: settings/iconbox_plugin.c:831 settings/iconbox_plugin.c:841
 #: settings/iconbox_plugin.c:992
-#, fuzzy
 msgid "Iconbox"
-msgstr "아이콘박스 설정"
+msgstr "아이콘박스"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -567,19 +565,16 @@ msgstr "화면 잠금"
 
 #. don't translate 'tip|'
 #: plugins/systembuttons/systembuttons.c:172
-#, fuzzy
 msgid "tip|Exit"
 msgstr "종료"
 
 #. don't translate 'tip|'
 #: plugins/systembuttons/systembuttons.c:174
-#, fuzzy
 msgid "tip|Setup"
 msgstr "설정"
 
 #. don't translate 'tip|'
 #: plugins/systembuttons/systembuttons.c:176
-#, fuzzy
 msgid "tip|Info"
 msgstr "정보"
 
@@ -671,65 +666,56 @@ msgstr "Xfce 4 태스크바 설정"
 
 #: config/contents.xml.in.h:1
 msgid "Appfinder"
-msgstr ""
+msgstr "응용프로그램 찾기"
 
 #: config/contents.xml.in.h:2
 msgid "Drag file to print"
-msgstr ""
+msgstr "화일을 끌어다 놓으면 출력됩니다."
 
 #: config/contents.xml.in.h:3
-#, fuzzy
 msgid "File manager"
-msgstr "화일 관리"
+msgstr "화일 관리자"
 
 #: config/contents.xml.in.h:4
 msgid "Find and run applications"
-msgstr ""
+msgstr "응용프로그램을 찾아서 실행하기"
 
 #: config/contents.xml.in.h:5
 msgid "Konqueror"
-msgstr ""
+msgstr "컹커러"
 
 #: config/contents.xml.in.h:6
 msgid "Konqueror File Manager"
-msgstr ""
+msgstr "컹커러 화일 관리자"
 
 #: config/contents.xml.in.h:7
 msgid "Manual"
-msgstr ""
+msgstr "설명서"
 
 #: config/contents.xml.in.h:8
 msgid "Mozilla Web Browser"
-msgstr ""
+msgstr "모질라 웹 브라우져"
 
 #: config/contents.xml.in.h:9
 msgid "Music player"
-msgstr ""
+msgstr "음악 연주"
 
 #: config/contents.xml.in.h:10
 msgid "Nautilus"
-msgstr ""
+msgstr "노틸러스"
 
 #: config/contents.xml.in.h:11
 msgid "Nautilus File Manager"
-msgstr ""
+msgstr "노틸러스 화일 관리자"
 
 #: config/contents.xml.in.h:12
-#, fuzzy
 msgid "Printer Management"
-msgstr "화일 관리"
+msgstr "프린터 관리"
 
 #: config/contents.xml.in.h:13
-#, fuzzy
 msgid "Settings"
-msgstr "패널 설정"
+msgstr "설정"
 
 #: config/contents.xml.in.h:14
 msgid "Terminal"
 msgstr "터미널"
-
-#~ msgid "Menu"
-#~ msgstr "메뉴"
-
-#~ msgid "Always on top:"
-#~ msgstr "항상 위에 보이기:"
