--- a/po/cs.po
+++ b/po/cs.po
@@ -1,26 +1,27 @@
+# translation of cs.po to czech
 # translation of cs.po to Czech
 # Czech translation for xfdesktop
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Lukáš Konarovský <daeltar@daeltar.org>, 2003.
-# Alois Nespor <Alois.Nespor@seznam.cz>, 2004.
+# Alois Nespor <Alois.Nespor@seznam.cz>, 2004, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: cs\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-21 13:35+0200\n"
-"PO-Revision-Date: 2004-10-28 10:34+0000\n"
+"PO-Revision-Date: 2005-03-24 23:51+0100\n"
 "Last-Translator: Alois Nespor <Alois.Nespor@seznam.cz>\n"
-"Language-Team: Czech <cs@li.org>\n"
+"Language-Team: czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3\n"
+"X-Generator: KBabel 1.9.1\n"
 
 #: panel/xfce_support.c:514
 msgid "Select file"
-msgstr "Vyber soubor"
+msgstr "Vybrat soubor"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
@@ -36,11 +37,11 @@ msgstr "Vlastnosti položky"
 
 #: panel/controls_dialog.c:207 panel/controls.c:691
 msgid "Removing the item will also remove its popup menu."
-msgstr "Odstranením položky odstraníte také její vyskakovací menu."
+msgstr "Odstraněním položky odstraníte také její vyskakovací menu."
 
 #: panel/item_dialog.c:123 panel/item_dialog.c:551
 msgid "Select command"
-msgstr "Vyber příkaz"
+msgstr "Vybrat příkaz"
 
 #: panel/item_dialog.c:264
 msgid "Command:"
@@ -52,7 +53,7 @@ msgstr "Spustit v _terminálu"
 
 #: panel/item_dialog.c:325
 msgid "Use startup _notification"
-msgstr "Použij  _oznámení při startu"
+msgstr "Použít _oznámení při startu"
 
 #: panel/item_dialog.c:511
 msgid "Other Icon"
@@ -60,7 +61,7 @@ msgstr "Jiná ikona"
 
 #: panel/item_dialog.c:622
 msgid "Drag file onto this frame to change the icon"
-msgstr "Táhni soubor na tento rám ke změně ikony"
+msgstr "Táhnot soubor na tento rám ke změně ikony"
 
 #: panel/item_dialog.c:917
 msgid "Caption:"
@@ -72,7 +73,7 @@ msgstr "Rada:"
 
 #: panel/item_dialog.c:974
 msgid "Attach menu to launcher"
-msgstr "Pridej menu k spušteči"
+msgstr "Přidat menu k spouštěči"
 
 #: panel/item_dialog.c:1194
 msgid "Change menu item"
@@ -101,7 +102,7 @@ msgstr "Přidej novou položku"
 
 #: panel/main.c:121
 msgid "Are you sure you want to exit?"
-msgstr "Skutečně chcete ukončit Xfce?"
+msgstr "Skutečně chcete ukončit ?"
 
 #: panel/main.c:398
 #, c-format
@@ -123,18 +124,18 @@ msgstr ""
 " Součást grafického prostředí Xfce\n"
 " http://www.xfce.org\n"
 "\n"
-" Licence GNU GPL.\n"
+" Licence pod GNU GPL.\n"
 "\n"
 
 #: panel/main.c:472
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr "%s: Úspešně spustěno bez správy relace"
+msgstr "%s: Úspěšně spuštěno bez správy relace"
 
 #: panel/main.c:477
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr "%s: Úspešně spustěno se správou relace"
+msgstr "%s: Úspěšně spuštěno se správou relace"
 
 #: panel/controls.c:646
 #, c-format
@@ -176,7 +177,7 @@ msgstr "_Restartovat"
 
 #: panel/panel.c:595
 msgid "E_xit"
-msgstr "_Ukončit práci"
+msgstr "_Ukončit"
 
 #: panel/icons.c:60
 msgid "Default"
@@ -216,7 +217,7 @@ msgstr "Grafika"
 
 #: panel/icons.c:69
 msgid "Printer"
-msgstr "Tiskárna"
+msgstr "Tisk"
 
 #: panel/icons.c:70
 msgid "Productivity"
@@ -240,7 +241,7 @@ msgstr "Menu"
 
 #: settings/xfce_settings_dialog.c:88
 msgid "Small"
-msgstr "Malý"
+msgstr "Malé"
 
 #: settings/xfce_settings_dialog.c:92
 msgid "Medium"
@@ -248,11 +249,11 @@ msgstr "Střední"
 
 #: settings/xfce_settings_dialog.c:96
 msgid "Large"
-msgstr "Velký"
+msgstr "Velké"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr "Obrovský"
+msgstr "Obrovské"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -376,7 +377,7 @@ msgstr "Grafický přepínač ploch"
 
 #: plugins/switcher/switcher.c:698
 msgid "Desktop switcher"
-msgstr "Tlačítkový přepínač ploch"
+msgstr "Přepínač desktopu"
 
 #: plugins/systembuttons/systembuttons.c:85
 msgid ""
@@ -447,7 +448,7 @@ msgstr "Při obdržení nové pošty spustit příkaz"
 
 #: plugins/mailcheck/mailcheck.c:868
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Při stiknutí tlačítka na panelu spustit příkaz"
+msgstr "Při stisknutí tlačítka na panelu spustit příkaz"
 
 #: plugins/mailcheck/mailcheck.c:889
 msgid "Interval (sec):"
