Allow all controls to act on changing the panel side; specifically the new launcher.
(Old svn revision: 14204)

--- a/po/az.po
+++ b/po/az.po
@@ -688,7 +688,7 @@ msgid ""
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1313
-msgid "Panel Item and Menu Items"
+msgid "Panel Item and Menu"
 msgstr ""
 
 #: ../plugins/mailcheck/mailcheck.c:838
