--- a/po/nl.po
+++ b/po/nl.po
@@ -662,8 +662,8 @@ msgstr ""
 "menu geplaatst."
 
 #: ../plugins/launcher/launcher-dialog.c:1313
-msgid "Panel Item and Menu Items"
-msgstr "Paneel-item en menu-items"
+msgid "Panel Item and Menu"
+msgstr "Paneel-item en menu"
 
 #: ../plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
