--- a/po/sv.po
+++ b/po/sv.po
@@ -688,7 +688,7 @@ msgid ""
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1313
-msgid "Panel Item and Menu Items"
+msgid "Panel Item and Menu"
 msgstr ""
 
 #: ../plugins/mailcheck/mailcheck.c:838
