--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 NEWS for xfce4-panel
 ====================
 
+4.2.2
+=======
+- Updated translations (Jean-François).
+
 4.2.1.1
 =======
 - Fix bad bug where panel configuration was lost when saving the session
