update JA translations
(Old svn revision: 14279)

--- a/po/ja.po
+++ b/po/ja.po
@@ -1,15 +1,15 @@
-# Japanese translation for xfce4-panel.
-# Copyright (C) 2002-2005, The Xfce development team.
+# Japanese translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Zhao Ji <zhao-ji@awz.ne.jp>, 2003-2004.
 # Daichi Kawahata <daichik@users.sourceforge.net>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2005-03-16 05:12+0900\n"
+"PO-Revision-Date: 2005-05-13 07:27+0900\n"
 "Last-Translator: Daichi Kawahata <daichik@users.sourceforge.net>\n"
 "Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -233,9 +233,8 @@ msgid "Settings manager not available"
 msgstr "設定マネージャが利用できません"
 
 #: panel/popup.c:267
-#, fuzzy
 msgid "Menu"
-msgstr "マニュアルを表示します"
+msgstr "メニュー"
 
 #: settings/xfce_settings_dialog.c:87
 msgid "Small"
@@ -290,9 +289,8 @@ msgid "Popup position:"
 msgstr "ポップアップ位置:"
 
 #: settings/xfce_settings_dialog.c:343
-#, fuzzy
 msgid "Always on top:"
-msgstr "常にタスクをまとめる(_G)"
+msgstr "常に上部に表示する:"
 
 #: settings/xfce_settings_dialog.c:397
 msgid "Autohide:"
@@ -356,7 +354,7 @@ msgstr "午前/午後"
 
 #: plugins/clock/clock.c:562
 msgid "Show seconds:"
-msgstr "秒表示:"
+msgstr "秒を表示する:"
 
 #: plugins/clock/clock.c:675
 msgid "Xfce Clock"
@@ -443,11 +441,11 @@ msgstr "新規メール受信時のコマンド:"
 
 #: plugins/mailcheck/mailcheck.c:889
 msgid "Command to run when new mail arrives"
-msgstr "新しいメールが到着した時に実行されるコマンドです"
+msgstr "新しいメールが到着した時に実行するコマンドです"
 
 #: plugins/mailcheck/mailcheck.c:919
 msgid "Command to run when the button on the panel is clicked"
-msgstr "パネル上のボタンがクリックされた時に実行されるコマンドです"
+msgstr "パネル上のボタンがクリックされた時に実行するコマンドです"
 
 #: plugins/mailcheck/mailcheck.c:940
 msgid "Interval (sec):"
@@ -456,186 +454,3 @@ msgstr "間隔 (秒):"
 #: plugins/mailcheck/mailcheck.c:1016
 msgid "Mail checker"
 msgstr "メール確認プログラム"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "ターミナル"
-
-#~ msgid "There is already a system tray running on this screen"
-#~ msgstr "この画面には既に動作しているシステムトレイがあります"
-
-#~ msgid "Unable to register system tray: %s"
-#~ msgstr "システムトレイを登録できません: %s"
-
-#~ msgid "%A %d %B %Y"
-#~ msgstr "%Y %B %d %A"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "タスクバー"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS クライアントのチャンネルを作成できません"
-
-#~ msgid "Xfce Iconbox"
-#~ msgstr "Xfce アイコンボックス"
-
-#~ msgid "Developer"
-#~ msgstr "開発者"
-
-#~ msgid "_About"
-#~ msgstr "このプログラムにについて(_A)"
-
-#~ msgid "Position"
-#~ msgstr "位置"
-
-#~ msgid "_Top"
-#~ msgstr "最上部(_T)"
-
-#~ msgid "_Bottom"
-#~ msgstr "最下部(_B)"
-
-#~ msgid "Alignment:"
-#~ msgstr "配置:"
-
-#~ msgid "_Left"
-#~ msgstr "左側(_L)"
-
-#~ msgid "_Center"
-#~ msgstr "中央(_C)"
-
-#~ msgid "_Right"
-#~ msgstr "右側(_R)"
-
-#~ msgid "Size"
-#~ msgstr "大きさ"
-
-#~ msgid "Height:"
-#~ msgstr "縦幅:"
-
-#~ msgid "Width:"
-#~ msgstr "横幅:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "画面に合うよう縮める(_S)"
-
-#~ msgid "Autohide"
-#~ msgstr "自動的に隠す"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "タスクバーを自動的に隠す(_H)"
-
-#~ msgid "Tasklist"
-#~ msgstr "タスクリスト"
-
-#~ msgid "Show tasklist"
-#~ msgstr "タスクリストを表示"
-
-#~ msgid "Show tasks from _all workspaces"
-#~ msgstr "全てのワークスペースからタスクを表示(_A)"
-
-#~ msgid "Show application _names"
-#~ msgstr "アプリケーション名を表示(_N)"
-
-#~ msgid "Pager"
-#~ msgstr "ページャ"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "タスクバーでページャを表示(_P)"
-
-#~ msgid "Status area"
-#~ msgstr "通知エリア"
-
-#~ msgid "Show _notification icons"
-#~ msgstr "通知アイコンを表示(_N)"
-
-#~ msgid "Show _time"
-#~ msgstr "時間を表示(_T)"
-
-#~ msgid "General"
-#~ msgstr "一般"
-
-#~ msgid "Components"
-#~ msgstr "コンポーネント"
-
-#~ msgid "Icon size"
-#~ msgstr "アイコンの大きさ"
-
-#~ msgid "_Show only minimized applications"
-#~ msgstr "最小化したアプリケーションのみ表示(_S)"
-
-#~ msgid "Transparency"
-#~ msgstr "透明度"
-
-#~ msgid "None"
-#~ msgstr "不透明"
-
-#~ msgid "Full"
-#~ msgstr "透明"
-
-#~ msgid "Iconbox"
-#~ msgstr "アイコンボックス"
-
-#~ msgid "tip|Exit"
-#~ msgstr "Xfce を終了します"
-
-#~ msgid "tip|Setup"
-#~ msgstr "設定を行います"
-
-#~ msgid "tip|Info"
-#~ msgstr "お知らせを表示します"
-
-#~ msgid "Panel Settings"
-#~ msgstr "パネル設定"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce 4 パネル設定"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "アイコンボックス設定"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce 4 アイコンボックス設定"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "タスクバー設定"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 タスクバー設定"
-
-#~ msgid "Appfinder"
-#~ msgstr "アプリファインダー"
-
-#~ msgid "Drag file to print"
-#~ msgstr "印刷するファイルをここにドラッグして下さい"
-
-#~ msgid "File manager"
-#~ msgstr "ファイルマネージャを実行します"
-
-#~ msgid "Find and run applications"
-#~ msgstr "アプリケーションを検索・実行します"
-
-#~ msgid "Konqueror"
-#~ msgstr "Konqueror"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "ファイルマネージャ Konqueror を実行します"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "ウェブブラウザ Mozilla を実行します"
-
-#~ msgid "Music player"
-#~ msgstr "音楽プレイヤーを実行します"
-
-#~ msgid "Nautilus"
-#~ msgstr "Nautilus"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "ファイルマネージャ Nautilus を実行します"
-
-#~ msgid "Printer Management"
-#~ msgstr "印刷機の管理を行います"
-
-#~ msgid "Settings"
-#~ msgstr "設定を行います"
